0.9.1 (currently working on)
- [#3543] Fix: Multiple registrations when double-clicking submit-button
- [#3149] Fix: Search in list module ignores the the registration titles
- [#3792] Fix: Total price not shown on registration summary page
- [#3793] Change: The "my managed events" list should take timeframeInList into account
- [#3784] Fix: $this->iEdition not defined in addAdministrativeData
- [#3802] Fix: Test failures in latest TYPO3 due to changed icon paths
- [#3766] Fix: In the events CSV file, place not formatted correctly
- [#3065] Change: Use the new getters/setters when using the configuration proxy
- [#2586] Change: Remove the conflict with date2cal once the date2cal bugs have been fixed
- [#3735] Fix: Error 102 when saving a registration record in backend
- [#3779] Fix: Typo in the Event Model: "Boad"
- [#3595] Fix: Internet Explorer shows border around radio button on registration page, patch by Thomas Biesenbach
- [#3710] Change: Use self:: for static calls within the same class
- [#3450] Change: Mention in setup.txt that the admin should not copy'n'paste the complete template into the TS template
- [#3729] Change: Provide ext_autoload for our extensions
- [#3718] Fix: CSV file displayed in the brower or saved with php suffix, original patch by Jörn Dost

0.9.0 (released 2010-03-01)
- [#3712] Fix: Items in the search filter comboboxes should be sorted alphabetically
- [#3696] Feature: Add links "hide" and "unhide" to the lists of editable events
- [#3695] Feature: Add functions for hiding and unhiding events
- [#3681] Change: In the notification e-mails to the organizers, use the organizer as sender
- [#3697] Feature: Add a timespan "today"
- [#3706] Change: Hide the partner integration and the new prices in the 0.9.x branch before the beta
- [#3700] Fix: In pi1::hideRegisterColumnIfNecessary, $whatToDisplay is undeclared
- [#3703] Cleanup: Refactor and unit-test pi1::getEditLink